LIBDRUM-892. Incorporation of admin sidebar cutoff fix from LIBDRUM-872
In DSpace 7.6.2, LIBDRUM-872 back-ported a DSpace 8.0 fix to the
admin sidebar menu entries being partially cutoff when displayed in
Firefox.

The stock DSpace fix does not seem to completely fix the issue on
Firefox, so incoporating this change to ensure that the admin
sidebar continues to display correctly.

https://umd-dit.atlassian.net/browse/LIBDRUM-892

--- a/src/app/admin/admin-sidebar/admin-sidebar.component.scss
+++ b/src/app/admin/admin-sidebar/admin-sidebar.component.scss
@@ -140,6 +140,15 @@
 }
 
 ::ng-deep {
+  // UMD Customization
+  // Adaption of DSpace 8.0 fix from https://github.com/DSpace/dspace-angular/pull/2976
+  // This customization should be removed when updated in DSpace
+  // The "browser-firefox" setting was not included in the DSpace 8.0 pull
+  // request, but appears to be necessary for MacOS.
+  .browser-firefox {
+    --ds-dark-scrollbar-width: 20px;
+  }
+  // End UMD Customization
   .browser-firefox-windows {
     --ds-dark-scrollbar-width: 20px;
   }
